k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portal-capacitaciones
  labels:
    project: portal-capacitaciones
